--- a/librechat-config-yaml/main/librechat-up-l.yaml
+++ b/librechat-config-yaml/main/librechat-up-l.yaml
@@ -9,6 +9,24 @@ interface:
   termsOfService:
     externalUrl: 'https://librechat.ai/tos'
     openNewTab: true
+  parameters: true
+  fileSearch: true
+
+  endpointsMenu: true
+  modelSelect: true
+  sidePanel: true
+  presets: true
+  prompts: true
+  bookmarks: true
+  multiConvo: true
+  agents: true
+  peoplePicker:
+    users: true
+    groups: true
+    roles: true
+  marketplace:
+      use: false
+  fileCitations: true
 
 registration:
   socialLogins:
@@ -2183,3 +2201,37 @@ endpoints:
       summaryModel: "grok-beta"
       forcePrompt: false
       modelDisplayLabel: "Grok"
+
+
+fileConfig:
+  endpoints:
+    assistants:
+      fileLimit: 5
+      fileSizeLimit: 10
+      totalSizeLimit: 500
+      supportedMimeTypes:
+        - "image/.*"
+        - "application/pdf"
+        - "text/markdown"
+        - "text/plain"
+    openAI:
+      disabled: true
+    default:
+      totalSizeLimit: 20
+    YourCustomEndpointName:
+      fileLimit: 500
+      fileSizeLimit: 10000
+      supportedMimeTypes:
+        - "image/.*"
+        - "text/markdown"
+        - "text/plain"
+  serverFileSizeLimit: 10000
+  avatarSizeLimit: 2
+  imageGeneration:
+    percentage: 100
+    px: 10240
+supportedMimeTypes:
+    - "image/.*"
+    - "application/pdf"
+    - "text/markdown"
+    - "text/plain"
