--- a/librechat-config-yaml/main/librechat-up-l.yaml
+++ b/librechat-config-yaml/main/librechat-up-l.yaml
@@ -1496,6 +1496,12 @@ endpoints:
         default:
           - openrouter/auto
           - '---FREE---'
+          - x-ai/grok-4-fast:free
+          - tngtech/deepseek-r1t-chimera:free
+          - tngtech/deepseek-r1t2-chimera:free
+          - deepseek/deepseek-chat-v3.1:free
+          - qwen/qwen3-235b-a22b:free
+          - qwen/qwen3-coder:free
           - openrouter/cypher-alpha:free
           - agentica-org/deepcoder-14b-preview:free
           - arliai/qwq-32b-arliai-rpr-v1:free
@@ -1553,7 +1559,6 @@ endpoints:
           - qwen/qwen2.5-vl-3b-instruct:free
           - qwen/qwen2.5-vl-72b-instruct:free
           - qwen/qwen3-14b:free
-          - qwen/qwen3-235b-a22b:free
           - qwen/qwen3-30b-a3b:free
           - qwen/qwen3-32b:free
           - qwen/qwen3-4b:free
@@ -1565,9 +1570,6 @@ endpoints:
           - thudm/glm-4-9b:free
           - thudm/glm-z1-32b:free
           - thudm/glm-z1-9b:free
-          - tngtech/deepseek-r1t-chimera:free
-          - tngtech/deepseek-r1t2-chimera:free
-          - deepseek/deepseek-chat-v3.1:free
           - '---BETA---'
           - anthropic/claude-2.0:beta
           - anthropic/claude-2.1:beta
